--- a/examples/BioStatistics.jl Example notebook.ipynb
+++ b/examples/BioStatistics.jl Example notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ce9777f8",
+   "id": "d07a1769",
    "metadata": {},
    "source": [
     "# BioStatistics.jl : Julia Package for Biostats"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b14f5192",
+   "id": "a47a31c1",
    "metadata": {},
    "source": [
     "## Implementation of Biostatistics Tools from BIO 313 course"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5595c4b",
+   "id": "558f4ecb",
    "metadata": {},
    "source": [
     "### Modules:\n",
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "09871da3",
+   "id": "23fc867c",
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "348da17c",
+   "id": "6e899bf5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46bd2432",
+   "id": "18c5085f",
    "metadata": {},
    "source": [
     "Course Content:\n",
@@ -83,9 +83,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b1cfeda6",
+   "metadata": {},
+   "source": [
+    "### Possible class that can be created:\n",
+    "* Random variables continous and discrete\n",
+    "* distributions can be coded as classes (structs in this case)\n",
+    "* Plots as functions of the classes of distributions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df84c28e",
+   "id": "3eeb8f73",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6bd6db71",
+   "id": "4a3700d8",
    "metadata": {},
    "source": [
     "## Module on Bayesian Statistics: \n",
@@ -161,6 +172,14 @@
     "* Bayesian Hypothesis testing\n",
     "* "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "622379d0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
